# onnx-coreml

./: .gitignore  .gitmodules  .travis.yml  LICENSE.txt  README.md  contributing.md  install-develop.sh  install.sh  setup.cfg  setup.py  setup.pyi
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md  -question---help.md  bug_report.md  feature_request.md  question---help.md
examples/: BERT.ipynb  README.md  examples.md  small_example.py  utils.py
onnx_coreml/: __init__.py  _backend.py  _backend_rep.py  _error_utils.py  _graph.py  _operators.py  _operators_nd.py  _shapeinference.py  _transformers.py  backend.py  converter.py  graph_viz.py
stubs/click/: __init__.pyi  core.pyi  decorators.pyi  exceptions.pyi  termui.pyi  types.pyi  utils.pyi
stubs/numpy/: __init__.pyi  random.pyi
tests/: _test_utils.py  convert_test.py  custom_layers_test.py  graph_test.py  model_test.py  onnx_backend_models_test.py  onnx_backend_node_test.py  onnx_backend_test.py  operators_test.py  pytorch_model_test.py  test_mlmodel_passes.py  transformers_test.py
tests/test_data/test_avg_pool_1/: output.npy
tests/test_data/test_avg_pool_2/: output.npy
tests/test_data/test_bn/: output.npy
tests/test_data/test_concat/: input.npy  output.npy
tests/test_data/test_constant/: input.npy  output.npy
tests/test_data/test_conv/: output.npy
tests/test_data/test_conv_transpose/: input.npy  output.npy
tests/test_data/test_conv_without_pads/: output.npy
tests/test_data/test_gather/: input.npy  (+1 more)
travis/: after_failure.sh  before_install.sh  install.sh  script.sh  setup.sh
(+32 files in other folders)
