[metadata]
description-file = README.md

[aliases]
test=pytest

[tool:pytest]
addopts = --cov=onnx_coreml --cov-report term-missing
testpaths = tests

[mypy]
follow-imports = silent  # TODO Remove this
mypy_path = stubs
#mypy_path = stubs:third_party/pytorch:third_party/onnx
strict_optional = True
warn_return_any = True
warn_no_return = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_incomplete_stub = True
disallow_untyped_calls = True
check_untyped_defs = True
disallow_any_generics = True
no_implicit_optional = True
# TODO Add disallow_untyped_defs = True
# TODO Add disallow_incomplete_defs = True
# TODO Add disallow_subclassing_any = True
disallow_untyped_decorators = True
warn_unused_configs = True
[mypy-onnx.*]
ignore_errors = True
ignore-missing-imports = True
